# doctest-ai

./: .env  README.md  app.py  main.py  migrate.py  models.py  pyproject.toml  sample.txt
static/css/: custom.css  editor.css  main.css
static/css/components/: analytics.css  animations.css  base.css  cards.css  forms.css  hero.css  modals.css  results.css  scenarios.css  (+2 more)
static/js/: analytics.js  automation.js  azure-integration.js  editor.js  export.js  integrations.js  main.js  main.js.bak  main.js.broken  playground.js  results.js
templates/: agent_settings.html  agent_sidebar.html  analytics.html  image_display.html  index.html  layout.html  progress.html  results.html  results.html.backup  results.html.bak  results_partial.html  scenarios.html  settings.html
templates/partials/: azure_model_selection.html
templates/settings/: index.html
utils/: advanced_ai_processor.py  advanced_image_processor.py  ai_service.py  analytics.py  auto_processor.py  azure_service.py  batch_processor.py  deepseek_service.py  docling_parser.py  document_analyzer.py  document_chunker.py  document_optimizer.py  document_optimizer.py.bak  document_parser.py  image_optimizer.py  llama_parser.py  logging_config.py  model_selector.py  multi_model_processor.py  neuraagent.py  neuraagent.py.bak  neuraagent_ext.py  neuradoc.py  neuradoc_enhanced.py  ollama_service.py  openai_service.py  process_stats.py  send_to_azure.py  smart_document_processor.py
utils/analytics/: __init__.py  coverage_analyzer.py
utils/config/: __init__.py  app_config.json  config.json  config_manager.py
