[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "docling>=1.20.0",
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "flask-session>=0.8.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "llama-cloud>=0.1.17",
    "llama-parse>=0.6.4.post1",
    "numpy>=1.26.4",
    "openai>=1.69.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "textract>=1.6.5",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
    "werkzeug>=3.1.3",
    "pdfminer-six>=20191110",
    "camelot-py>=0.8.0",
]
